# sasta_notepad

./: .env  .gitignore  README.md  TROUBLESHOOTING.txt  main.py  pyproject.toml  requirements.txt  vercel.json
api/: main.py
app/: main.py  models.py
app/routers/: folders.py  users.py
app/services/: notes_service.py
backend/: app.db  requirements.txt  run.ps1  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 30305d93d87d_create_tables.py  688bb969a065_init.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  folders.py  notes.py  users.py
backend/app/services/: folder_service.py
frontend/: app.js  config.js  generate-config.ps1  index.html  login.html  login.js  main.html  main.js  style.css  styles.css
